# nanoboost

./: .gitignore  CITATION.cff  README.md  config.yaml  pyproject.toml  requirements.txt
data/: README.md
examples/: preprocess_and_extract.py  train_classifier.py
models/: README.md
nanoboost/cli/: main.py
nanoboost/scripts/data_preprocessing/: baseline_correction.py  event_isolation.py  peak_finder.py
nanoboost/scripts/discrete_wavelet_transform/: novel_DWT.py
nanoboost/scripts/feature_extraction/: event_feature_extraction.py
nanoboost/scripts/utils/: utils.py
notebooks/: README.md
notebooks/DNA_conformation_clustering/: 14_DNA_metric.ipynb
notebooks/metric/: 12_preservation_metric.ipynb
notebooks/nanoparticle_shape_classification/: 10_NS_KMeans.ipynb  15_NR_TEM_clustering.ipynb
notebooks/nanoparticle_size_classification/: 2_ML_nanopores.ipynb  3_feature_extraction copy.ipynb  4_ML_all_wavelets copy.ipynb  5_event_generation_wholeeventDWT.ipynb  6_ML_whole_event copy.ipynb  7_ML_combined_data copy.ipynb  8_ML_best_model copy.ipynb
notebooks/utils/: all_funcs.py
results/: README.md
scripts/: README.md
scripts/discrete_wavelet_transform/: conventional_DWT.py  novel_DWT.py  wavelet_transform_setup.py
scripts/feature_extraction/: event_feature_extraction.py  feature_extraction_utils.py
scripts/ml_model_building/constrained_minimisation/: SGD.py  custom_metrics.py
scripts/ml_model_building/supervised_learning/: logistic_regression.py  (+1 more)
tests/: test_cli.py  test_signal_processing.py  test_utils.py  test_wavelet.py
(+8 files in other folders)
